# airbyte-sage-intacct

./: .gitignore  .release-please-config.json  CHANGELOG.md  Dockerfile  README.md  flake.nix  main.py  pyproject.toml  spec.json
.github/workflows/: docker-publish.yml  lint-pr.yml  release-please.yml
source_sage_intacct/: client.py  source.py  spec.py  streams.py
tests/: test_client.py  test_streams.py
